# Data_mining_project

./: d_tree.py  ex_submit.csv  main.py  output-graph.cv  output-graph.gv  pyproject.toml  test.csv  train.csv  xg.py
